# bfile

./: .env.example  CONTRIBUTING.md  DEPLOYING.md  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
conf/caddy/: Caddyfile
containers/: go-dev.Dockerfile  rust-dev.Dockerfile
filed/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  build.rs  dev-entry.sh
filed/config/: .gitignore  filed.toml.example
filed/docs/: file_api.swagger.yml
filed/src/: db.rs  env.rs  main.rs  security.rs
filed/src/config/: types.rs
filed/src/files/: lookup.rs  mod.rs
filed/src/web/: api.rs  curlapi.rs  forms.rs  mod.rs  pages.rs  rejection.rs  state.rs  uploaded.rs
filed/src/web/api/: files.rs  get_all.rs  types.rs
filed/src/web/api/files/: delete.rs  get_all.rs  upload.rs
filed/src/web/curlapi/: help.rs  upload.rs
filed/static/: .gitignore  delay.js  dragndrop-form.js  form.css  js-only.js  mobile-hide.css  paint.css  site.webmanifest
filed/static/assets/: alert.css  code.css  dragndrop-form.js  js-only.css  mobile-hide.css  paint.css  upload_form.css
filed/templates/: .gitignore  authors.html  base.html  curlapi_help.html  index.html  license.html  passworded-files.html  seotags.html  upload_success.html  uploaded.html
filed/templates/source/: authors.html  base.html  curlapi_help.html  error.html  seotags.html  tos.html
janitor/: .env.example  .gitignore  Cargo.toml  Dockerfile.prod  README.md  dev-entry.sh
janitor/src/: clean.rs  env.rs  file.rs  main.rs  state.rs
resource/: .air.toml  .gitignore  Dockerfile.prod  README.md  api_ref.swagger.yml  go.mod  go.sum  main.go  resourced.toml.example
volatile/: README.md
