[package]
name = "filed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
bytes = "1.5.0"
dotenvy = "0.15.7"
femme = "2.2.1"
futures-util = "0.3.28"
log = "0.4.20"
redis = { version = "0.23.3", features = ["tokio"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3.6"
