[package]
name = "filed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
compile-time-run = "0.2.12"
dotenvy = "0.15.7"
femme = "2.2.1"
futures-util = "0.3.28"
hex = "0.4.3"
log = "0.4.20"
num = { version = "0.4.1", features = ["serde"] }
redis = { version = "0.23.3", features = ["tokio"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
static_dir = "0.2.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3.6"
