[package]
name = "filed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
askama = "0.12.0"
base64 = "0.21.4"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
femme = "2.2.1"
futures-util = "0.3.28"
hex = "0.4.3"
log = "0.4.20"
num = { version = "0.4.1", features = ["serde"] }
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio", "tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
static_dir = "0.2.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.2"
urlencoding = "2.1.3"
warp = "0.3.6"

[profile.release]
opt-level = 'z'
lto = true

[build-dependencies]
css-minify = "0.3.1"
minify-js = "0.5.6"
